--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,14 +8,14 @@
     <string name="home_tab_status_loading">Loading…</string>
     <string name="home_tab_status_success">API data loaded.</string>
     <string name="home_tab_status_error">API reading error.</string>
-    <string name="fragment_main_button_connect">Connect to webhost</string>
-    <string name="fragment_main_edittext_hint">Enter webserver hostname:</string>
+    <string name="fragment_main_button_connect">Connect to host</string>
+    <string name="fragment_main_edittext_hint">Enter hostname:</string>
     <string name="fragment_station_last_updated"><b>Last updated:</b> %1$s</string>
     <string name="fragment_station_platform">Platform %1$s</string>
     <string name="fragment_route_list_dimension">Dimension no. %1$d</string>
     <string name="fragment_station_loading_failed">Timetable loading failed. Try again later.</string>
     <string name="item_no_departures_title">No upcoming departures</string>
-    <string name="item_no_departures_description">Try again or try searching for next departures at another nearby station.</string>
+    <string name="item_no_departures_description">Try it again or try searching for next departures at another nearby station.</string>
     <string name="item_no_internet_title">Connection error</string>
     <string name="item_no_internet_description">Make sure you\'re connected to internet and the server is up when you make the request and try again.</string>
     <string name="increment_dimension_error">Can\'t increment dimension. Already at its maximum.</string>
@@ -27,4 +27,13 @@
     <string name="fragment_timetable_select_spinner">- SELECT -</string>
     <string name="notconnected">- NOT CONNECTED -</string>
     <string name="no_destination">No destination has been set.</string>
+    <string name="now">Now</string>
+    <string name="minutes_left">%1$d min.</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="disconnect_dialogue">Are you sure you want to disconnect from the server?</string>
+    <string name="add">Add</string>
+    <string name="fields_required">Host name and URL are required!</string>
+    <string name="no_hosts">There\'s no host added, add one to access this.</string>
+    <string name="choose_address">Choose an address:</string>
 </resources>
